# FusionSeq

./: COPYING  Makefile.am  Makefile.in  NEWS  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  default.fusionseqrc  index.html  params.json
scripts/: Confp.pm  install_deploy.pl  install_rc.sh
src/: Makefile.am  Makefile.in  bowtie2bp.c  bp.c  bp.h  bp2alignment.c  bpFilter.cpp  geneFusions.c  gfr.c  gfr.h  gfr2bpJunctions.c  gfrAbnormalInsertSizeFilter.c  gfrAddInfo.c  gfrAnnotationConsistencyFilter.c  gfrBlackListFilter.c  gfrClassify.c  gfrConfidenceValues.c  gfrCountPairTypes.c  gfrExpressionConsistencyFilter.c  gfrLargeScaleHomologyFilter.c  gfrMitochondrialFilter.c  gfrPCRFilter.c  gfrProximityFilter.c  gfrRepeatMaskerFilter.c  gfrRibosomalFilter.c  gfrSmallScaleHomologyFilter.c  gfrSpliceJunctionFilter.c  gfrWhiteListFilter.c  sqvCircos.c  sqvCircos.h  sqvUtil.c  sqvUtil.h  sqvWeb.c  sqvWeb.h  util.c  util.h  validateBpJunctions.c
src/cgi/: Makefile.am  Makefile.in  findFusionPartner_cgi.c  geneFusions_cgi.c  seqViz_cgi.c  showDetails_cgi.c
src/optional/: Makefile.am  Makefile.in  bp2wig.c  export2mrf.c  gfr2bed.c  gfr2fasta.c  gfr2gff.c  gfr2images.c  gfrConfidenceValueTranscript.c
src/test/: Makefile.am  Makefile.in  bp2fasta.c  bpClustering.c  bpValidate.c  gfSimulation.c  mrfPseudogeneOverlap.c  plotIntraDistribution.cpp  quantifierAddInfo.c
